@@ -647,7 +647,7 @@
  STATE_646:0 "Saipan"
  STATE_647:0 "Palau"
  STATE_648:0 "Marcus Island"
- STATE_649:0 "Galapagos Islands"
+ #STATE_649:0 "Galapagos Islands"
  STATE_650:0 "Attu Island"
  STATE_651:0 "Ufa"
  STATE_652:0 "Orenburg"
